fix about pg bug in index

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </span>
 
             <ul>
-              <li><a href="index.html#projects">PROJECTS</a></li>
+              <li><a href="index.html">PROJECTS</a></li>
               <li><a href="about.html">ABOUT</a></li>
               <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/Tristine-Nguyen-Resume.pdf" target="_blank">RESUME</a></li>
             </ul>
@@ -70,7 +70,7 @@
   <main class="container">
 
     <!-- PROJECT 1 -->
-    <section class="project1">
+    <section>
         <img  class="photo" src="imagesUpdated/TNRProject/TNRhmpg.png" alt="project 1 background">
           <a href="project2.html">
             <div class="overlay">
@@ -144,11 +144,11 @@
 
         <!-- PROJECT 5 -->
         <section class="project5">
-            <img  class="photo" src="imagesUpdated/craigslistProject/craigslisthmpg.png" alt="project 5 background">
-              <a href="#">
+            <img  class="photo" src="imagesUpdated/roomsToGo/rtghmpg.png" alt="project 5 background">
+              <a href="password.html">
                 <div class="overlay">
                    <div class="overlay_description">
-                     Craigslist Redesign Coming Soon</div><!--overlay description-->
+                     Password Required</div><!--overlay description-->
                 </div><!--overlay end-->
               </a>
           </section>
