--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 
         <div id="side-menu" class="side-nav">
             <a href="#" class="btn-close" onclick="closeSlideMenu()">&times;</a>
-            <li><a href="index.#projects" class="portfolio">PROJECTS</a></li>
+            <li><a href="index.html" class="portfolio">PROJECTS</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/Tristine-Nguyen-Resume.pdf" target="_blank">RESUME</a></li>
         </div>
