--- a/uiChallenge.html
+++ b/uiChallenge.html
@@ -35,7 +35,7 @@
                 </span>
 
                 <ul>
-                  <li><a href="index.html#projects">PROJECTS</a></li>
+                  <li><a href="index.html">PROJECTS</a></li>
                   <li><a href="about.html">ABOUT</a></li>
                   <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/Tristine-Nguyen-Tristine-Nguyen-Resume.pdf" target="_blank">RESUME</a></li>
                 </ul>
