add rtg nav project

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       <div id="side-menu" class="side-nav">
           <a href="#" class="btn-close" onclick="closeSlideMenu()">&times;</a>
-          <li><a href="index.html#projects" class="portfolio">PROJECTS</a></li>
+          <li><a href="index.html">PROJECTS</a></li>
           <li><a href="about.html">ABOUT</a></li>
           <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/Tristine-Nguyen-Resume.pdf" target="_blank">RESUME</a></li>
       </div>
@@ -61,7 +61,7 @@
           </div>
 
         <div class="down-arrow">
-          <a href="#projects"><i class="fas fa-angle-down fa-3x"></i></a>
+          <a href=""><i class="fas fa-angle-down fa-3x"></i></a>
         </div>
       </div>
     </section>
@@ -69,9 +69,9 @@
 
   <main class="container">
 
-    <!-- PROJECT 1 -->
-    <section>
-        <img  class="photo" src="imagesUpdated/TNRProject/TNRhmpg.png" alt="project 1 background">
+    <!-- PROJECT 2 -->
+    <section class="project">
+        <img  class="photo" src="imagesUpdated/TNRProject/TNRhmpg.png" alt="project 2 background">
           <a href="project2.html">
             <div class="overlay">
                <div class="overlay_description">
@@ -80,9 +80,9 @@
           </a>
       </section>
 
-      <!-- PROJECT 2 -->
-      <section class="project2">
-        <img  class="photo" src="imagesUpdated/virtboxhmpg.png" alt="project 2 background">
+      <!-- PROJECT 1 -->
+      <section class="project">
+        <img  class="photo" src="imagesUpdated/virtboxhmpg.png" alt="project 1 background">
           <a href="project1.html">
             <div class="overlay">
                <div class="overlay_description">VirtBox Case Study</div><!--overlay description-->
@@ -90,8 +90,18 @@
           </a>
       </section>
 
+      <!-- PROJECT  -->
+      <section class="project">
+        <img  class="photo" src="imagesUpdated/roomsToGo/navhmpg.png" alt="project background">
+          <a href="roomsToGoNav.html">
+            <div class="overlay">
+               <div class="overlay_description">RTG Navigation Process Case Study</div><!--overlay description-->
+            </div><!--overlay end-->
+          </a>
+      </section>
+
       <!-- PROJECT 7 -->
-      <section class="project7">
+      <section class="project">
           <img  class="photo" src="imagesUpdated/ostProject/ost.png" alt="project 7 background">
             <a href="project7.html">
               <div class="overlay">
@@ -101,7 +111,7 @@
         </section>
 
       <!-- PROJECT 3 -->
-      <section class="project3">
+      <section class="project">
         <img  class="photo" src="imagesUpdated/timelineProject/Timelinehmpg.png" alt="project3 background">
           <a href="project3.html">
             <div class="overlay">
@@ -111,7 +121,7 @@
         </section>
 
         <!-- PROJECT 4 -->
-        <section class="project4">
+        <section class="project">
           <img  class="photo" src="imagesUpdated/emailProject/Emailhmpg.png" alt="project 4 background">
             <a href="project4.html">
               <div class="overlay">
@@ -121,7 +131,7 @@
         </section>
 
         <!-- PROJECT 6 -->
-        <section class="project6">
+        <section class="project">
             <img  class="photo" src="imagesUpdated/UIProject/uihmpg.png" alt="project 6 background">
               <a href="uiChallenge.html">
                 <div class="overlay">
@@ -143,7 +153,7 @@
             </section>
 
         <!-- PROJECT 5 -->
-        <section class="project5">
+        <section class="secretProject">
             <img  class="photo" src="imagesUpdated/roomsToGo/rtghmpg.png" alt="project 5 background">
               <a href="password.html">
                 <div class="overlay">
