update Altisource projects

--- a/roomsToGo.html
+++ b/roomsToGo.html
@@ -53,17 +53,14 @@
         <div class="grid2">
            <!-- OVERVIEW -->
            <section class ="overview">
-              <h3>Hi There!</h3>
-              <p>I had a pleasant time learning about Rooms To Go and your company's future plan for the UX division.
-                During our conversation, Denise mentioned some problems with the Rooms To Go current mobile app.
+              <h3>Rooms To Go Mobile App Redesign Suggestions</h3>
+              <p>While on the job search, I had an opportunity to interview at Rooms To Go. The hiring manager brought up some concerns regarding the company's current mobile app.
                 I decided to check it out and dissect it further to provide an improved user experience based on the reviews on Google Play and competitive analysis.
-                I'm very excited and would love to discuss this in person on how we can take this further.
               </p>
                 <br>
 
-                <p><span class="bold">DISCLAIMER:</span> The improved version suggestions do not take into account of Rooms To Go's business strategy and
+                <p><span class="bold">DISCLAIMER:</span> These suggestions do not take into account of Rooms To Go's business strategy and
                   may change should there be access to the business internal data analysis and business goals. </p>
-
 
                 <br>
                   <h3>PROCESS</h3>
