--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
           </div>
 
         <div class="down-arrow">
-          <a href=""><i class="fas fa-angle-down fa-3x"></i></a>
         </div>
       </div>
     </section>
@@ -69,70 +68,60 @@
 
   <main class="container">
 
-    <!-- PROJECT 2 -->
+    <!-- EQUATOR SRP  -->
     <section class="project">
-        <img  class="photo" src="imagesUpdated/TNRProject/TNRhmpg.png" alt="project 2 background">
-          <a href="project2.html">
+      <img  class="photo" src="imagesUpdated/EquatorSRP/SRP.png" alt="Equator search results page project background">
+        <a href="EquatorSRP.html">
+          <div class="overlay">
+             <div class="overlay_description">Equator Search Results Page (UX/UI)</div><!--overlay description-->
+          </div><!--overlay end-->
+        </a>
+    </section>
+
+    <!-- EQUATOR PDP  -->
+    <section class="project">
+      <img  class="photo" src="imagesUpdated/EquatorPDP/PDP.png" alt="Equator property details page project background">
+        <a href="EquatorPDP.html">
+          <div class="overlay">
+             <div class="overlay_description">Equator Property Details Page (UX/UI)</div><!--overlay description-->
+          </div><!--overlay end-->
+        </a>
+    </section>
+
+    <!-- Equator Home Page -->
+    <section class="project">
+      <img  class="photo" src="imagesUpdated/EquatorHomePage/EquatorHomePage.png" alt="Equator home page background">
+        <a href="EquatorHomePage.html">
+          <div class="overlay">
+             <div class="overlay_description">Equator Home Page Redegsign (Web Design)</div><!--overlay description-->
+          </div><!--overlay end-->
+        </a>
+    </section>
+
+    <!-- TNR HUMANE -->
+   <section class="project">
+       <img  class="photo" src="imagesUpdated/TNRProject/TNRhmpg.png" alt="TNR project background">
+         <a href="TNRHumane.html">
+           <div class="overlay">
+              <div class="overlay_description">
+                TNRHumane Case Study</div><!--overlay description-->
+           </div><!--overlay end-->
+         </a>
+     </section>
+
+      <!-- VIRTBOX -->
+      <section class="project">
+        <img  class="photo" src="imagesUpdated/virtboxhmpg.png" alt="virtBoxpProject background">
+          <a href="virtBox.html">
             <div class="overlay">
-               <div class="overlay_description">
-                 TNRHumane Case Study</div><!--overlay description-->
+               <div class="overlay_description">VirtBox Case Study (UX/UI)</div><!--overlay description-->
             </div><!--overlay end-->
           </a>
       </section>
 
-      <!-- PROJECT 1 -->
-      <section class="project">
-        <img  class="photo" src="imagesUpdated/virtboxhmpg.png" alt="project 1 background">
-          <a href="project1.html">
-            <div class="overlay">
-               <div class="overlay_description">VirtBox Case Study</div><!--overlay description-->
-            </div><!--overlay end-->
-          </a>
-      </section>
-
-      <!-- PROJECT  -->
-      <section class="project">
-        <img  class="photo" src="imagesUpdated/roomsToGo/navhmpg.png" alt="project background">
-          <a href="roomsToGoNav.html">
-            <div class="overlay">
-               <div class="overlay_description">RTG Navigation Process Case Study</div><!--overlay description-->
-            </div><!--overlay end-->
-          </a>
-      </section>
-
-      <!-- PROJECT 7 -->
-      <section class="project">
-          <img  class="photo" src="imagesUpdated/ostProject/ost.png" alt="project 7 background">
-            <a href="project7.html">
-              <div class="overlay">
-                 <div class="overlay_description">GreenSky's Custumer Service's Dashboard Overview</div><!--overlay description-->
-              </div><!--overlay end-->
-            </a>
-        </section>
-
-      <!-- PROJECT 3 -->
-      <section class="project">
-        <img  class="photo" src="imagesUpdated/timelineProject/Timelinehmpg.png" alt="project3 background">
-          <a href="project3.html">
-            <div class="overlay">
-               <div class="overlay_description">GreenSky Responsive Timeline Overview</div><!--overlay description-->
-            </div><!--overlay end-->
-          </a>
-        </section>
-
-        <!-- PROJECT 4 -->
+        <!-- UI CHALLENGE -->
         <section class="project">
-          <img  class="photo" src="imagesUpdated/emailProject/Emailhmpg.png" alt="project 4 background">
-            <a href="project4.html">
-              <div class="overlay">
-                 <div class="overlay_description">GreenSky Email Template Overview</div><!--overlay description-->
-              </div><!--overlay end-->
-            </a>
-        </section>
-
-        <!-- PROJECT 6 -->
-        <section class="project">
-            <img  class="photo" src="imagesUpdated/UIProject/uihmpg.png" alt="project 6 background">
+            <img  class="photo" src="imagesUpdated/UIProject/uihmpg.png" alt="UI Challenge project background">
               <a href="uiChallenge.html">
                 <div class="overlay">
                    <div class="overlay_description">
@@ -141,27 +130,77 @@
               </a>
           </section>
 
-          <!-- SECRET PROJECT -->
+          <!-- RTG MOBILE -->
+          <section class="secretProject">
+              <img  class="photo" src="imagesUpdated/roomsToGo/rtghmpg.png" alt="project 5 background">
+                <a href="roomsToGo.html">
+                  <div class="overlay">
+                     <div class="overlay_description">
+                       Rooms To Go Mobile App Redesign</div><!--overlay description-->
+                  </div><!--overlay end-->
+                </a>
+            </section>
+
+            <!-- Hubzu Signature Seller -->
+            <section class="project">
+              <img  class="photo" src="imagesUpdated/HubzuSigSeller/SigSeller.png" alt="Hubzu Signature Seller background">
+                <a href="#">
+                  <div class="overlay">
+                     <div class="overlay_description">Hubzu Signature Seller Dashboard (Coming Soon)</div><!--overlay description-->
+                  </div><!--overlay end-->
+                </a>
+            </section>
+            
+            <!-- EASECOMMUTE -->
+            <section class="project">
+              <img  class="photo" src="imagesUpdated/easeCommute/easeCommuteHmPg.png" alt="easeCommute background">
+                <a href="#l">
+                  <div class="overlay">
+                     <div class="overlay_description">easeCommute Case Study Coming Soon (UX/UI)</div><!--overlay description-->
+                  </div><!--overlay end-->
+                </a>
+            </section>
+
+                  <!-- GREENSKY DASHBOARD
+                  <section class="project">
+                      <img  class="photo" src="imagesUpdated/ostProject/ost.png" alt="project 7 background">
+                        <a href="project7.html">
+                          <div class="overlay">
+                             <div class="overlay_description">GreenSky's Customer Service's Dashboard Overview</div><!--overlay description--
+                          </div>
+                        </a>
+                    </section>-->
+
+                  <!-- GREENSKY TIMELINE
+                  <section class="project">
+                    <img  class="photo" src="imagesUpdated/timelineProject/Timelinehmpg.png" alt="project3 background">
+                      <a href="project3.html">
+                        <div class="overlay">
+                           <div class="overlay_description">GreenSky Responsive Timeline Overview</div><!--overlay description--
+                        </div><!--overlay end--
+                      </a>
+                    </section>-->
+
+                    <!-- GREENSKY EMAIL TEMPLATE
+                    <section class="project">
+                      <img  class="photo" src="imagesUpdated/emailProject/Emailhmpg.png" alt="project 4 background">
+                        <a href="project4.html">
+                          <div class="overlay">
+                             <div class="overlay_description">GreenSky Email Template Overview</div><!--overlay description
+                          </div><!--overlay end
+                        </a>
+                    </section>-->
+
+          <!-- SECRET PROJECT
           <section class="secretProject">
               <img  class="photo" src="imagesUpdated/answerRocketProject/answerRocket.png" alt="AnswerRocket background">
                 <a href="pass.html">
                   <div class="overlay">
                      <div class="overlay_description">
-                       Password Required</div><!--overlay description-->
-                  </div><!--overlay end-->
+                       Password Required</div>
+                  </div>
                 </a>
-            </section>
-
-        <!-- PROJECT 5 -->
-        <section class="secretProject">
-            <img  class="photo" src="imagesUpdated/roomsToGo/rtghmpg.png" alt="project 5 background">
-              <a href="password.html">
-                <div class="overlay">
-                   <div class="overlay_description">
-                     Password Required</div><!--overlay description-->
-                </div><!--overlay end-->
-              </a>
-          </section>
+            </section> -->
 
 
   </main>
