--- a/EquatorSRP.html
+++ b/EquatorSRP.html
@@ -95,7 +95,7 @@
               <p>I began exploring different ways to structure the investment filter. There were two main debatable ways to present the investment filter button (see below).
                 <em class="bold">We spent great amount of back and forth between designers and the product team debating whether we should place the investment filter button on the top with other filter features or to the right side. Due to the time constraint, our team decided to keep the investment filter on the top with the other filters in mobile view, but have it display on the right in tablet and desktop view.</em></p>
                   <br>
-                    <img class="ost" src="imagesUpdated/EquatorSRP/SRPButtonPlacement.jpg" alt="button placement sketches">
+                    <img class="ost" src="imagesUpdated/EquatorSRP/SRPPropertyCards.jpg" alt="property card sketches">
                       <br>
                         <p>If we had a budget and participants, I would test both placements to see which would drive the best results. Ideally, interviewing users would give great insights, and click behaviors would verify the best results.</p>
                           <br>
