--- a/EquatorSRP.html
+++ b/EquatorSRP.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/virtbox.css">
   <link rel="stylesheet" href="styles/TNRHumane.css">
+  <link rel="stylesheet" href="styles/uiChallenge.css">
   <link rel="stylesheet" href="styles/OneGridLayout.css">
   <link rel="stylesheet" href="styles/Altisource.css">
 
@@ -56,8 +57,8 @@
             <h1>Equator Search Results Page</h1>
               <p>During my time at Altisource, I was assigned as the main UX/UI designer for one of our sub-unit called <a href="https://www.equator.com/" target="_blank">Equator.com</a>.
                 Equator is a property marketing platform that allows investors to find auction, foreclosure, and short sale houses. The platform overall is outdated and needed much UX and UI improvement to help increase our investor base. </p>
-                <br><em class="bold">During this project phase, I was tasked to clean up the user interface of the search results page using the newly developed design system and
-                  implement the investment filter so investors can further receive more accurate search results.</em>
+                <p><em class="bold">During this project phase, I was tasked to clean up the user interface of the search results page using the newly developed design system and
+                  implement the investment filter so investors can further receive more accurate search results.</em></p>
           </section>
         </div>
 
@@ -67,25 +68,25 @@
               <p>After setting up meetings with the Design Director and Product Manager, I was able to grasp the scope of the project.
                 Some of my findings are as follows:</p>
 
-                <ul><p class="bold">Requirements</p>
+                <ul><p class="bold subtitle">PROBLEMS</p>
+                  <li>Since we won't have participants for user testings, I'll have to rely on past data from older projects, feedback, and user behavior analysts from the CRM team</li>
+                </ul>
+
+                <ul><p class="bold subtitle">SOLUTIONS</p>
+                  <li>Create a filter feature for investors to narrow their search results</li>
+                  <li>Categorize search results in 3 categories based on how it meets investor's search criteria: <u>good investment, great investment, and superb investment</u></li>
+                </ul>
+
+                <ul><p class="bold subtitle">REQUIREMENTS</p>
                   <li>Must  implement an investment filter in the filter section</li>
                   <li>Investors should be able to narrow their search based on <u>estimated monthly cash flow, estimated gross yield, and estimated net yield</u></li>
                   <li>Results should highlight properties that are best matched with the investor's requirements</li>
                 </ul>
 
-              <ul><p class="bold">Constraints</p>
+              <ul><p class="bold subtitle">CONSTRAINTS</p>
                 <li>Due to the pandemic, we'll have no budget or participants for user testings</li>
               </ul>
 
-              <ul><p class="bold">Problems</p>
-                <li>Since we won't have participants for user testings, I'll have to rely on past data from older projects, feedback, and user behavior analysts from the CRM team</li>
-              </ul>
-
-              <ul><p class="bold">Solutions</p>
-                <li>Create a filter feature for investors to narrow their search results</li>
-                <li>Categorize search results in 3 categories based on how it meets investor's search criteria: <u>good investment, great investment, and superb investment</u></li>
-
-              </ul>
           </section>
         </div>
 
@@ -94,14 +95,10 @@
             <h3>Ideation</h3>
               <p>I began exploring different ways to structure the investment filter. There were two main debatable ways to present the investment filter button (see below).
                 <em class="bold">We spent great amount of back and forth between designers and the product team debating whether we should place the investment filter button on the top with other filter features or to the right side. Due to the time constraint, our team decided to keep the investment filter on the top with the other filters in mobile view, but have it display on the right in tablet and desktop view.</em></p>
-                  <br>
-                    <img class="ost" src="imagesUpdated/EquatorSRP/buttonPlacement.jpg" alt="SRP button sketches">
-                      <br>
-                        <p>If we had a budget and participants, I would test both placements to see which would drive the best results. Ideally, interviewing users would give great insights, and click behaviors would verify the best results.</p>
-                          <br>
-                            <p>The next challenge was to categorize the search results. This process caused a total teardown of the current property card because of the limited real estate and the amount of information need to be included.</p>
-                              <br>
-                              <img class="ost" src="imagesUpdated/EquatorSRP/SRPPropertyCards.jpg" alt="property card sketches">
+                  <p><img class="ost" src="imagesUpdated/EquatorSRP/buttonPlacement.jpg" alt="SRP button sketches"></p>
+                    <p>If we had a budget and participants, I would test both placements to see which would drive the best results. Ideally, interviewing users would give great insights, and click behaviors would verify the best results.</p>
+                      <p>The next challenge was to categorize the search results. This process caused a total teardown of the current property card because of the limited real estate and the amount of information need to be included.</p>
+                        <p><img class="ost" src="imagesUpdated/EquatorSRP/SRPPropertyCards.jpg" alt="property card sketches"></p>
           </section>
         </div>
 
@@ -109,8 +106,7 @@
           <section>
             <h3>Design</h3>
               <p>The time frame for designing was only one week, thus, I decided to jump right into high fidelity. Luckily, I had created a design system prior, so this process was less time consuming.</p>
-                <br>
-                  <img class="ost" src="imagesUpdated/EquatorSRP/SRPHiFi.png" alt="final srp hifi">
+                <img class="ost" src="imagesUpdated/EquatorSRP/SRPHiFi.png" alt="final srp hifi">
           </section>
         </div>
 
