--- a/index.html
+++ b/index.html
@@ -68,6 +68,26 @@
 
   <main class="container">
 
+    <!-- Hubzu Signature Seller -->
+    <section class="project">
+      <img  class="photo" src="imagesUpdated/HubzuSigSeller/SigSeller.png" alt="Hubzu Signature Seller background">
+        <a href="SigSeller.html">
+          <div class="overlay">
+             <div class="overlay_description">Hubzu Signature Seller Dashboard (UX/UI)</div><!--overlay description-->
+          </div><!--overlay end-->
+        </a>
+    </section>
+
+    <!-- EASECOMMUTE -->
+    <section class="project">
+      <img  class="photo" src="imagesUpdated/easeCommute/easeCommuteHmPg.png" alt="easeCommute background">
+        <a href="easeCommute.html">
+          <div class="overlay">
+             <div class="overlay_description">easeCommute Case Study (UX/UI)</div><!--overlay description-->
+          </div><!--overlay end-->
+        </a>
+    </section>
+
     <!-- EQUATOR SRP  -->
     <section class="project">
       <img  class="photo" src="imagesUpdated/EquatorSRP/SRP.png" alt="Equator search results page project background">
@@ -104,7 +124,7 @@
          <a href="TNRHumane.html">
            <div class="overlay">
               <div class="overlay_description">
-                TNRHumane Case Study</div><!--overlay description-->
+                TNRHumane Case Study (UX/UI)</div><!--overlay description-->
            </div><!--overlay end-->
          </a>
      </section>
@@ -130,36 +150,16 @@
               </a>
           </section>
 
-          <!-- RTG MOBILE -->
+          <!-- RTG MOBILE
           <section class="secretProject">
               <img  class="photo" src="imagesUpdated/roomsToGo/rtghmpg.png" alt="project 5 background">
                 <a href="roomsToGo.html">
                   <div class="overlay">
                      <div class="overlay_description">
-                       Rooms To Go Mobile App Redesign</div><!--overlay description-->
-                  </div><!--overlay end-->
+                       Rooms To Go Mobile App Redesign</div><!--overlay description
+                  </div><!--overlay end
                 </a>
-            </section>
-
-            <!-- Hubzu Signature Seller -->
-            <section class="project">
-              <img  class="photo" src="imagesUpdated/HubzuSigSeller/SigSeller.png" alt="Hubzu Signature Seller background">
-                <a href="#">
-                  <div class="overlay">
-                     <div class="overlay_description">Hubzu Signature Seller Dashboard (Coming Soon)</div><!--overlay description-->
-                  </div><!--overlay end-->
-                </a>
-            </section>
-            
-            <!-- EASECOMMUTE -->
-            <section class="project">
-              <img  class="photo" src="imagesUpdated/easeCommute/easeCommuteHmPg.png" alt="easeCommute background">
-                <a href="#l">
-                  <div class="overlay">
-                     <div class="overlay_description">easeCommute Case Study Coming Soon (UX/UI)</div><!--overlay description-->
-                  </div><!--overlay end-->
-                </a>
-            </section>
+            </section> -->
 
                   <!-- GREENSKY DASHBOARD
                   <section class="project">
