--- a/EquatorHomePage.html
+++ b/EquatorHomePage.html
@@ -58,7 +58,6 @@
               <p>During my time at Altisource, I was assigned as the main UX/UI designer for one of our sub-unit called <a href="https://www.equator.com/" target="_blank">Equator.com</a>.
                 Equator is a property marketing platform that allows investors to find auction, foreclosure, and short sale houses.
                 My responsibility was to redesign and rebrand Equator's home page, search results page, and property details page.</p>
-                <br>
                   <p><em class="bold">In the fall of 2020, I took the first step and worked with our Design Director and Product team to
                     redesign Equator.com home page to update the website's aesthetic and promote Equator's new feature of return on
                     property investment to better serve our investors.</em></p>
@@ -71,27 +70,27 @@
               <p>After setting up meetings with the Design Director and Product Manager, I was able to grasp the scope of the project.
                 Some of my findings are as follows:</p>
 
-                <ul><p class="bold">Requirements</p>
+                <ul><p class="bold subtitle">PROBLEMS</p>
+                  <li>There's currently no filter for investors to narrow down their search based on estimated monthly cash flow, estimated gross yield, and estimated net yield</li>
+                  <li>There's no established style guide, thus, creating a lot of consistency issues</li>
+                  <li>Since we won't have participants for user testings, I'll have to rely on past data from older projects, feedback, and user behavior analysts from the CRM team</li>
+                </ul>
+
+                <ul><p class="bold subtitle">SOLUTIONS</p>
+                  <li>Create a filter feature for investors to narrow their search results</li>
+                  <li>Create a style guide for consistency, but must keep the main blue color. Having an established style guide will make the design process easier, more consistent, and less time consuming in the next phases.</li>
+                </ul>
+
+                <ul><p class="bold subtitle">REQUIREMENTS</p>
                   <li>Must have an investment filter in the property search process</li>
                   <li>Must use the blue color as the main brand color</li>
                   <li>Must keep the existing contents, but can be rearranged and add creativity to it</li>
                 </ul>
 
-              <ul><p class="bold">Constraints</p>
+              <ul><p class="bold subtitle">CONSTRAINTS</p>
                 <li>Due to the pandemic, we'll have no budget or participants for user testings</li>
               </ul>
 
-              <ul><p class="bold">Problems</p>
-                <li>There's currently no filter for investors to narrow down their search based on estimated monthly cash flow, estimated gross yield, and estimated net yield</li>
-                <li>There's no established style guide, thus, creating a lot of consistency issues</li>
-                <li>Since we won't have participants for user testings, I'll have to rely on past data from older projects, feedback, and user behavior analysts from the CRM team</li>
-              </ul>
-
-              <ul><p class="bold">Solutions</p>
-                <li>Create a filter feature for investors to narrow their search results</li>
-                <li>Create a style guide for consistency, but must keep the main blue color. Having an established style guide will make the design process easier, more consistent, and less time consuming in the next phases.</li>
-
-              </ul>
           </section>
         </div>
 
@@ -100,7 +99,6 @@
             <h3>Ideation</h3>
               <p>Since most of the home page requires more of an aesthetic redesign, I decided to focus on tackling the investment filter.
                 The team wants to present the filter feature within the fold. I experimented with different ideas, prioritizing ideas that are more mobile-friendly.</p>
-                <br>
                   <img class="ost" src="imagesUpdated/EquatorHomePage/HmPgFilterSketches.jpg" alt="sketches hifi">
           </section>
         </div>
@@ -110,7 +108,6 @@
             <h3>Design</h3>
               <p>After the ideation process, I moved on to creating a global design system, which keeps the current main blue color but implemented clean lines, light shadows, and a secondary color that highlights primary CTA buttons.
                 I aimed to keep the design language consistent throughout the website. I also created icon and illustration sets that feature slightly rounded corners. Having an established style guide will make the design process easier, more consistent, and less time consuming in the next phases.</p>
-              <br>
               <p>Under the fold, I included a recommended listings section to boost investor's interest in browsing our inventory follows by an introductory/benefits section to prove how Equator can add value to our investor's journey. The rest of the contents were designed in a more exciting way to browse different services and a better way to display blog posts.</p>
                   <img class="ost" src="imagesUpdated/EquatorHomePage/search.png" alt="search hifi">
                   <img class="ost" src="imagesUpdated/EquatorHomePage/filter.png" alt="filter hifi">
