--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="mailto:tristine@mail.usf.edu" target="_blank">
+                  <a href="mailto:tristinenguyen147@gmail.com" target="_blank">
                     <img src="imagesUpdated/iconsLogos/email.svg" alt="email icon" width="24" height="24">
                   </a>
                 </li>
