--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <ul>
               <li><a href="index.html">PROJECTS</a></li>
               <li><a href="about.html">ABOUT</a></li>
-              <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/Tristine-Nguyen-Resume.pdf" target="_blank">RESUME</a></li>
+              <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/Tristine_Nguyen_Resume.pdf" target="_blank">RESUME</a></li>
             </ul>
       </div>
     </nav>
@@ -44,7 +44,7 @@
           <a href="#" class="btn-close" onclick="closeSlideMenu()">&times;</a>
           <li><a href="index.html">PROJECTS</a></li>
           <li><a href="about.html">ABOUT</a></li>
-          <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/Tristine-Nguyen-Resume.pdf" target="_blank">RESUME</a></li>
+          <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/Tristine_Nguyen_Resume.pdf" target="_blank">RESUME</a></li>
       </div>
     <!-- hero unit -->
     <section class="hero"> <!-- background -->
@@ -67,6 +67,16 @@
   </header>
 
   <main class="container">
+
+    <!-- Global Payments -->
+    <section class="project">
+      <img  class="photo" src="imagesUpdated/GlobalPayments.png" alt="Global Payments Logo">
+        <!-- <a href=""> -->
+          <div class="overlay">
+             <div class="overlay_description">A year long project at an international company that leveraged Salesforce technologies to combine 5 parts of the businesses into 1 uniformed experience (Contact me for access)</div><!--overlay description-->
+          </div><!--overlay end-->
+        </a>
+    </section>
 
     <!-- Hubzu Signature Seller -->
     <section class="project">
@@ -129,15 +139,16 @@
          </a>
      </section>
 
-      <!-- VIRTBOX -->
+      <!-- VIRTBOX
       <section class="project">
         <img  class="photo" src="imagesUpdated/virtboxhmpg.png" alt="virtBoxpProject background">
           <a href="virtBox.html">
             <div class="overlay">
                <div class="overlay_description">VirtBox Case Study (UX/UI)</div><!--overlay description-->
-            </div><!--overlay end-->
+            </div><!--overlay end--
           </a>
       </section>
+    -->
 
         <!-- UI CHALLENGE -->
         <section class="project">
