--- a/index.html
+++ b/index.html
@@ -88,15 +88,15 @@
         </a>
     </section>
 
-    <!-- EASECOMMUTE -->
+    <!-- EASECOMMUTE --
     <section class="project">
       <img  class="photo" src="imagesUpdated/easeCommute/easeCommuteHmPg.png" alt="easeCommute background">
         <a href="easeCommute.html">
           <div class="overlay">
              <div class="overlay_description">easeCommute Case Study (UX/UI)</div><!--overlay description-->
-          </div><!--overlay end-->
+          </div><!--overlay end
         </a>
-    </section>
+    </section> -->
 
     <!-- EQUATOR SRP  -->
     <section class="project">
