--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
                       <p>I’m a designer with a background in Management Information Systems.
                         My background helped me learn to code and nurtured my goal to create user-centered design.
                         I care for homeless cats in the community.
-                        My passion to help animals enhances my ability to empathize with user’s needs.</p>
+                        My passion to help animals enhances my ability to empathize with my users.</p>
             </div>
            </div>
           </section>
@@ -95,7 +95,7 @@
                     A successful design is one that changes the way people see and experience things.
                     It changes perspectives, it informs, it persuades, and it’s powerful.</p></li>
 
-          <li><p>I realized I’ve always gravitated to it like a magnet ever since 2005.
+          <li><p>I realized I’ve always gravitated to design ever since 2005.
                       UI/UX design matches with my interest in creativity, technology, and psychology.</p></li>
 
           <li><p>Having the gut to start over and invest in myself is my biggest accomplishment. It’s a big risk. A good one. I learned a lot and enjoyed what I do;
