--- a/index.html
+++ b/index.html
@@ -68,25 +68,75 @@
 
   <main class="container">
 
-    <!-- Global Payments -->
+    <!-- Global Payments UPC-->
     <section class="project">
-      <img  class="photo" src="imagesUpdated/GlobalPayments.png" alt="Global Payments Logo">
+      <img  class="photo" src="imagesUpdated/UPC.png" alt="UPC Figma working environment screenshot">
         <!-- <a href=""> -->
           <div class="overlay">
-             <div class="overlay_description">A year long project at an international company that leveraged Salesforce technologies to combine 5 parts of the businesses into 1 uniformed experience (Contact me for access)</div><!--overlay description-->
+             <div class="overlay_description">An internal application that helps onboarding Global Payments' merchants and partners onto our API.</div><!--overlay description-->
           </div><!--overlay end-->
         </a>
     </section>
 
-    <!-- Hubzu Signature Seller -->
+    <!-- Global Payments API Explorer-->
+    <section class="project">
+      <img  class="photo" src="imagesUpdated/API Explorer.png" alt="Showcasing different part of the API Explorer screen">
+        <!-- <a href=""> -->
+          <div class="overlay">
+             <div class="overlay_description">An overhauled of Global Payments' API Explorer to make it faster, clearer, and easier for developers to discover, test, and integrate our APIs.</div><!--overlay description-->
+          </div><!--overlay end-->
+        </a>
+    </section>
+
+    <!-- Global Payments CAB-->
+    <section class="project">
+      <img  class="photo" src="imagesUpdated/CAB.png" alt="Customer Advisory Website Screenshots in destop and mobile screens">
+        <!-- <a href=""> -->
+          <div class="overlay">
+             <div class="overlay_description">I designed and developed our Customer Advisory Board website and email template from scratch within 5 days to help gather feedback from users and help our busy UI developer with his workload.</div><!--overlay description-->
+          </div><!--overlay end-->
+        </a>
+    </section>
+
+    <!-- Global Payments PIVOT-->
+    <section class="project">
+      <img  class="photo" src="imagesUpdated/Pivot.png" alt="Showcasing different variations of the word Pivot">
+        <!-- <a href=""> -->
+          <div class="overlay">
+             <div class="overlay_description">I helped braintorming logo ideas for our design team's EOY's event based on the pivot scence from Friends (which I've never watched before).</div><!--overlay description-->
+          </div><!--overlay end-->
+        </a>
+    </section>
+
+    <!-- Global Payments UX Reference Library-->
+    <section class="project">
+      <img  class="photo" src="imagesUpdated/UX Reference Library.png" alt="UX Reference Library Screenshot">
+        <!-- <a href=""> -->
+          <div class="overlay">
+             <div class="overlay_description">A passion project for our design team to help reduce double effort in solving redundant design problems.</div><!--overlay description-->
+          </div><!--overlay end-->
+        </a>
+    </section>
+
+    <!-- Global Payments TAM Servicing-->
+    <section class="project">
+      <img  class="photo" src="imagesUpdated/GlobalPayments.png" alt="Global Payments Logo">
+        <!-- <a href=""> -->
+          <div class="overlay">
+             <div class="overlay_description">A year long project at Global Payments that leveraged Salesforce technologies to merge 5 parts of the businesses into 1 uniformed experience (Contact me for access)</div><!--overlay description-->
+          </div><!--overlay end-->
+        </a>
+    </section>
+
+    <!-- Hubzu Signature Seller
     <section class="project">
       <img  class="photo" src="imagesUpdated/HubzuSigSeller/SigSeller.png" alt="Hubzu Signature Seller background">
         <a href="SigSeller.html">
           <div class="overlay">
-             <div class="overlay_description">Hubzu Signature Seller Dashboard (UX/UI)</div><!--overlay description-->
-          </div><!--overlay end-->
+             <div class="overlay_description">Hubzu Signature Seller Dashboard (UX/UI)</div><!--overlay description
+          </div><!--overlay end
         </a>
-    </section>
+    </section> -->
 
     <!-- EASECOMMUTE --
     <section class="project">
@@ -98,44 +148,44 @@
         </a>
     </section> -->
 
-    <!-- EQUATOR SRP  -->
+    <!-- EQUATOR SRP
     <section class="project">
       <img  class="photo" src="imagesUpdated/EquatorSRP/SRP.png" alt="Equator search results page project background">
         <a href="EquatorSRP.html">
           <div class="overlay">
-             <div class="overlay_description">Equator Search Results Page (UX/UI)</div><!--overlay description-->
-          </div><!--overlay end-->
+             <div class="overlay_description">Equator Search Results Page (UX/UI)</div><!--overlay description
+          </div><!--overlay end
         </a>
     </section>
 
-    <!-- EQUATOR PDP  -->
+    <!-- EQUATOR PDP
     <section class="project">
       <img  class="photo" src="imagesUpdated/EquatorPDP/PDP.png" alt="Equator property details page project background">
         <a href="EquatorPDP.html">
           <div class="overlay">
-             <div class="overlay_description">Equator Property Details Page (UX/UI)</div><!--overlay description-->
-          </div><!--overlay end-->
+             <div class="overlay_description">Equator Property Details Page (UX/UI)</div><!--overlay description
+          </div><!--overlay end
         </a>
     </section>
 
-    <!-- Equator Home Page -->
+    <!-- Equator Home Page
     <section class="project">
       <img  class="photo" src="imagesUpdated/EquatorHomePage/EquatorHomePage.png" alt="Equator home page background">
         <a href="EquatorHomePage.html">
           <div class="overlay">
-             <div class="overlay_description">Equator Home Page Redegsign (Web Design)</div><!--overlay description-->
-          </div><!--overlay end-->
+             <div class="overlay_description">Equator Home Page Redegsign (Web Design)</div><!--overlay description
+          </div><!--overlay end
         </a>
     </section>
 
-    <!-- TNR HUMANE -->
+    <!-- TNR HUMANE
    <section class="project">
        <img  class="photo" src="imagesUpdated/TNRProject/TNRhmpg.png" alt="TNR project background">
          <a href="TNRHumane.html">
            <div class="overlay">
               <div class="overlay_description">
                 TNRHumane Case Study (UX/UI)</div><!--overlay description-->
-           </div><!--overlay end-->
+           </div><!--overlay end
          </a>
      </section>
 
@@ -150,14 +200,14 @@
       </section>
     -->
 
-        <!-- UI CHALLENGE -->
+        <!-- UI CHALLENGE
         <section class="project">
             <img  class="photo" src="imagesUpdated/UIProject/uihmpg.png" alt="UI Challenge project background">
               <a href="uiChallenge.html">
                 <div class="overlay">
                    <div class="overlay_description">
                      Daily UI Challenge</div><!--overlay description-->
-                </div><!--overlay end-->
+                </div><!--overlay end
               </a>
           </section>
 
