--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <img  class="photo" src="imagesUpdated/Pivot.png" alt="Showcasing different variations of the word Pivot">
         <!-- <a href=""> -->
           <div class="overlay">
-             <div class="overlay_description">I helped braintorming logo ideas for our design team's EOY's event based on the pivot scence from Friends (which I've never watched before).</div><!--overlay description-->
+             <div class="overlay_description">I helped brainstorm logo ideas for our design team’s EOY event based on the pivot scene from Friends (which I’ve never watched).</div><!--overlay description-->
           </div><!--overlay end-->
         </a>
     </section>
@@ -306,3 +306,4 @@
 
   </body>
   </html>
+
